--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/native-storage": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.2.0",
